fixed minor style problems on mobile devices

--- a/_static/css/style.css
+++ b/_static/css/style.css
@@ -15,6 +15,27 @@ img {
   height: auto;
 }
 
+@media screen and (max-width: 875px) {
+    /* fix bad padding? */
+    div.sphinxsidebar {
+        display: block;
+        float: none;
+        width: 100%;
+        margin: -20px -30px 20px -30px;
+        padding: 10px 30px;
+    }
+
+    /* fix bad bullet-margins */
+    div > ul {
+        margin-left: 30px;
+    }
+}
+
+
+dd > ul {
+    margin-left: 0;
+}
+
 i.sidebar-social-links {
     border-radius: 20%;
     border: solid transparent 1px;
